<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileSelect</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

     <string name="search">搜索</string>
     <string name="latest">最近</string>
     <string name="select">选择</string>
     <string name="other">其他</string>
     <string name="office">OFFICE</string>
     <string name="look">浏览</string>
     <string name="pdf">PDF</string>
     
</resources>
